mycms/media/readingStyle.css
#innovationsAnchor{
    text-decoration:none;
    color: red;
}

#innovationsAnchor:visited{
    color:red;
}

#innovationsAnchor:hover{
    color:#99CC00;
}

#amplifyAnchor{
    text-decoration:none;
    color: #009DAE;
}


#amplifyAnchor:visited{
    color: #009DAE;
}


#amplifyAnchor:hover{
    color: #99CC00;
}    

#allOutsideLinks{
    float: right;
    margin-top: 15px;
    color: grey;
    font-family: helvetica;
}
 
.outsideLinks a:link{
    border-right: 2px grey solid;
    padding-right: 10px;
    padding-left: 10px;
    text-decoration:none;
    color: #009DAE;
    
}

.outsideLinks a:visited{
    color: #009DAE;
}


.outsideLinks a:hover
{
    color:#99CC00;
}

#whiteBorder{
    background-color: #EDEEE1;
    width: 1292px;
    position: relative;
    left: 0px;
    top: 25px;
    margin-left: auto;
    margin-right: auto;
    padding-left: 30px;
    padding-right: 30px;
    overflow-x: none;
	
}



#amplifyHeading {
    background-color: white;
    color: #009DAE;
    font-family: 'Bitter',serif;
    font-size: 72pt;
    margin-left: -30px;
    padding-left: 25px;
    padding-right: 35px;        /*padding left and right sum to 60px*/
    position: relative;
    text-align: left;
    width: 100%;
    z-index: 999;
    padding-top: 25px;


}

#innovationsHeading {
    font-family: "Times New Roman", serif;
    color: red;
    font-size: 1.28em;
    padding-left: 106px;               /*15px*/
    padding-top: 3px;
}

#tHeading {
    font-style: italic;
}

#innovationsWholeDiv{  
/*     padding-left: 25px; */
padding-top: 3px;               /*to account for innovations logo imperfection*/
padding-left:22px;
     display: inline;
/*     z-index: -1; */
/* /\*   border-bottom: 5px solid #00CCCC;*\/ */
  }


#currentArticle{
    background-color: #00CCCC;
    font-weight: bold;
}

#abstractTitle{
/*	font-family: 'Patua One', cursive;*/
/*	font-family: 'Headland One', serif;*/
	font-family: 'Bitter', serif;
/*	font-size: 48pt;*/
    font-size: 32pt;
	text-align: center;
	color: #009DAE;
	width: 350px;
/*        padding-left: 15px;*/
        padding-right: 15px;
        padding-top: 20px;
        padding-bottom:30px;/*10px*/
        text-align: left;
        position: relative;
/*        margin-bottom: 19px;*/

}

#mapImg{
    position: relative;
    padding-left: 75px;
    background-color: #F5F9E7;
    width: 275px;               /*350-75*/
    padding-bottom: 58px;
    padding-top: 20px;
    
}

#entireAbstractBlurb{
    width: 350px;
    background-color: #F5F9E7;
    padding-top: 10px;
    padding-bottom: 5px;
}

#abstractRest{
	font-size: 10pt;
	font-family: helvetica;
        line-height: 1.6em;
        padding: 0 15px 10px 20px;
        width: 87%;
}



.collapse{
    display: inline;
    float: left;
    font-family: helvetica;
    font-size: 11pt;
    color: #009DAE;
    text-align: right;
    background-color: #F5F9E7;
    width: 340px;
    padding-right: 10px;
    padding-top: 5px;

}

.collapse:hover{
    color:#99CC00;
}

.expand{
    float: left;
    font-family: helvetica;
    font-size: 11pt;
    color: #009DAE;
    text-align: right;
    background-color: #F5F9E7;
    width: 340px;
    padding-right: 10px;
    padding-top: 5px;
}

.expand:hover{
    color:#99CC00;
}


#anchorForOutline{
    position: relative;
}

#preOutline{
    height:22px;
}

#outline{
    width: 350px;
    border-left: 1px solid grey;
    background-color: #F5F9E7;
}


.outlineBox{
    font-size: 10pt;
    font-family: helvetica;
    padding-top: 10px;
    padding-right: 10px;
    line-height: 1.2em;

}

.outlineTitle{
	padding-bottom: 5px;
	font-weight: bold;
        margin-bottom: 5px;
        font-family: 'Bitter';
        color: #3d3d3d;
}

.outlineTitle:hover{
    text-decoration:underline;

}

.outlineRest{
	padding-bottom: 20px;
        padding-left: 20px;
        margin-bottom: 5px;
}

.triangleOpen{
    float: left;
    display: inline;
    padding-right: 3px;
    padding-left: 3px;

}

.triangleClosed{
    float: left;
    display: inline;
    padding-right: 3px;
    padding-left: 3px;
}




#article{
    font-family: helvetica;
    font-size: 10pt;
    line-height: 1.2em;
    background-color: white;
	width: 500px;
	position: relative;
 	padding-bottom: 45px;
  /*      padding-top: 20px;*/
/*	padding-left: 35px;*/
	padding-right: 50px;
        position: relative;
	display: inline;
	float:left;
}



#articleTitle{
    float: right;
	background-color: white;
        width: 750px;
        position: relative;
        padding-top: 10px;
        padding-bottom: 10px;
        width: 65.1%;
        line-height: 2.4em;
        padding-left: 28px;
        padding-right: 31px;

}

#articleMainTitle{
    display: inline;
    text-align: left;
}

#articleSubtitle{
    position: relative;
  /*  float: left;*/
    display: inline;
    text-align: left;
}


.biggerTitle{
    font-family: 'Times New Roman', serif;
    font-size: 25pt;
    font-weight: 800;
}

.smallerTitle{
    font-family: 'Times New Roman', serif;

    font-size: 20pt;
}
.author-heading{
    font-size: 14pt;
}

.author-ref{
    font-weight: bold;
}

#reference{
    /*background-color: white;*/
/*    padding-bottom:60px;*/
    position:relative;
/*    padding-left: 50px;*/
/*    padding-right: 10px;*/
    display:inline;

/*    left: 35px;*/
}



#wholeRightCol{
    background-color: white;
    float: right;
    /*overflow-x: hidden;*/
    width: 840px;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 30px;
    
}

/*
.artPar{
    padding-left: 10px;
}

#article p{
    padding-left: 10px;
}
*/

.footNumber{
    color: #009DAE;
/*    color: #EE4624; /* tangerine */
/*    color: #99CC00;             /*lime green*/
}

.refNum{
   display: inline;
   font-size:8pt;
   line-height: 1.2em;
   color: #009DAE;
}

h2{
    line-height:1.1em;
}


.references{
    font-size:8pt;
    line-height: 1.2em;
}

.references a:link{
    color: #009DAE;
    font-size: 10pt;
    text-decoration: none;
}

.references a:visited{
    color: #009DAE;
    font-size: 10pt;
    text-decoration: none;
}

.references a:hover{
    color: #99CC00;
    font-size: 10pt;
    text-decoration: none;
}


/* style specific to homepage */
#map{
    background-color: #EDEEE1;
    padding-bottom: 50px;
    padding-left: 50px;
    padding-top: 50px;
    width: 100%;
    margin-top: 30px;
}


#amplifyHome {
    background-color: white;
    color: #009DAE;
    font-family: 'Bitter',serif;
    font-size: 72pt;
    margin-left: auto;
    position: relative;
    text-align: left;

    z-index: 999;
    padding-top: 60px;
    text-align: left;
    padding-left: 50px;

}

#homeSlate{
    margin-left: auto;
    left: 0px;
     width: 1150px;
     border-left: 5px #efefef solid;
     height: 900px;
 
}

#innovationsHome{
    font-family: "Times New Roman", serif;
    color: red;
    font-size: 1.18em;
    width: 65%;
    text-align: right;
}

#amplifySpiel{
    width: 46%;
    display: inline;
    height: 100px;
    float: left;
    font-family: 'bitter';
    font-size: 24pt;
/*    background-color:grey;*/
}

.homeAuthor{
    display: block;
    
    font-family: helvetica;
    font-weight: 800;
    padding-top: 10px;
    color: grey;

    
}

.issueTitle{
    display: block;
    padding-bottom:5px;
    font-size: 12pt;
    padding-left: 8px;
    font-weight:400;
    opacity: 0.35;

}



#homeAbstract{
    display: inline;
}

#spacer10 {
    padding: 10px 0px 0px 0px;
}

#spacer20 {
    padding: 20px 0px 0px 0px;
}

#spacer30 {
    padding: 30px 0px 0px 0px;
}

#spacer40 {
    padding: 40px 0px 0px 0px;
}

#spacer50 {
    padding: 50px 0px 0px 0px;
}

#spacer60 {
    padding: 60px 0px 0px 0px;
}

#spacer70 {
    padding: 70px 0px 0px 0px;
}

#spacer80 {
    padding: 80px 0px 0px 0px;
}

#spacer90 {
    padding: 90px 0px 0px 0px;
}

#spacer100 {
    padding: 100px 0px 0px 0px;
}

#spacer110 {
    padding: 110px 0px 0px 0px;
}

#spacer120 {
    padding: 120px 0px 0px 0px;
}

#spacer130 {
    padding: 130px 0px 0px 0px;
}

#spacer140 {
    padding: 140px 0px 0px 0px;
}

#spacer150 {
    padding: 140px 0px 0px 0px;
}

#spacer160 {
    padding: 140px 0px 0px 0px;
}

#spacer170 {
    padding: 140px 0px 0px 0px;
}

#spacer180 {
    padding: 140px 0px 0px 0px;
}

#spacer190 {
    padding: 140px 0px 0px 0px;
}

#spacer200 {
    padding: 140px 0px 0px 0px;
}

    


.volHeading{
    font-weight: 800;
    font-size: 12pt;
    border-left: 2px solid #efefef;
    padding-left: 8px;
    padding-top:15px;
    padding-bottom:10px;
}

.homeArtTitle {
    opacity: 0.35;
}

.homeArtTitle:hover {
    opacity: 1.0;
}



.volHeading > span {
    opacity: 0.35;
}

.innovCategory > span{
    opacity: 0.35;

}    

#innovIndex{
    float: right;
    width: 50%;
    font-size: 14pt;
    font-family: helvetica;
    list-style-type: none;
    font-family: 'Karla', sans-serif;
    margin-top: -5px;
}

.homeArtTitle{
}


ul#innovIndex > ul> li {
    font-size: 10pt;
    list-style-type: none;
    padding-top: 12px;
    padding-bottom: 3px;

}

.innovCategory{
    list-style-type: none;
    padding-top:10px;
}


#innovIndex ul ul{
    list-style-type: none;
    font-size: 10pt;
    line-height: 1.0em;
}

#innovIndex ul ul {
    list-style-type: none;
    font-size: 10pt;
    line-height: 1.2em;
}

.homeArtTitle a:link{
    text-decoration: none;
    color: black;
}

.homeArtTitle a:visited{
    text-decoration: none;
    color: black;
}

